Improvements: Implement 12 backend enhancements and add security